# encryption-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: push.yml
decrypter/: Cargo.toml
decrypter/src/: lib.rs
encrypter/: Cargo.toml
encrypter/src/: lib.rs
encryption_cli/: Cargo.toml
encryption_cli/src/: main.rs
file/src/: lib.rs
keys/: Cargo.toml
keys/src/: lib.rs
src/: decrypter.rs  encrypter.rs  file.rs  key.rs  main.rs
test-files/encrypted-files/: test-read-file.encrypted
test-files/keys/: decryption-key.pem  encryption-key.pem
