[package]
name = "encryption-cli"
version = "0.1.0"
edition = "2021"
author = "1x2kb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand.workspace = true
rsa.workspace = true
file = {path = "../file"}
keys = {path = "../keys"}
decrypter = {path = "../decrypter"}
encrypter = {path = "../encrypter"}